--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -286,13 +286,30 @@ main {
               }
             }
           }
-
-          >.buy-options{
-            >button :first-child{
-                border-radius: 6px;
-                border-color: currentColor;
-    background: 0 0;
-    color: #f6861f;
+          > .buy-buttons {
+            position: absolute;
+            right: 0;
+            > :first-child {
+              border-radius: 6px;
+              border-color: currentColor;
+              background: 0 0;
+              background-color: #f6861f;
+              color: white;
+              border: 1px solid currentColor;
+              padding: 1.1rem 3.5rem 1rem 0.2rem;
+              font-size: 1rem;
+              align-items: center;
+              cursor: pointer;
+            }
+            > :last-child {
+              background-color: #40b659;
+              color: white;
+              border: 1px solid currentColor;
+              border-radius: 6px;
+              padding: 1rem 1rem;
+              font-weight: 600px;
+              font-size: 1.2rem;
+              cursor: pointer;
             }
           }
         }
